@@ -25,7 +25,7 @@
 ModuleToProcess = 'Carbon.psm1'
 
 # Version number of this module.
-ModuleVersion = '0.4.0.1'
+ModuleVersion = '0.5.0.0'
 
 # ID used to uniquely identify this module
 GUID = '075d9444-c01b-48c3-889a-0b3490716fa2'
